<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free App Notifier</string>
    <string name="app_title">Free App Notifier for Amazon</string>

    <!-- Notification -->
    <string name="app_store_package">com.amazon.venezia</string>
    <string name="app_store_download_url">http://www.amazon.com/amazonappstoreapp</string>
    <string name="app_data_url">http://android.skylark95.com/amazonnotify/v2/getAppData.php?mode=default&amp;appVersionCode=13</string>
    
    <string name="notification_simple_title">Amazon Free App Notifier</string>
    <string name="notification_simple_text">Click to launch the Amazon Appstore</string>
    <string name="notification_error_text">Error Downloading Data</string>
    <string name="notification_simple_offline_text">No Internet Connection</string>
    <string name="notification_simple_no_app_store_text">Click to download the Amazon Appstore</string>
    
    <!-- Dialogs -->
    <string name="changelog_title">Changelog</string>
    <string name="uk_users_title">UK Users</string>    
    <string name="close_button">Close</string>

    <!-- Setting Tab -->
    <string name="settings_tab_title">Settings</string>
    <string name="notifications_enabled_label">Notifications Enabled:</string>
    <string name="show_name_price_label">Show app name and price:</string>
    <string name="show_on_boot_label">Show notification on boot:</string>
    <string name="play_notification_sound_label">Play Notification sound:</string>
    <string name="vibrate_label">Vibrate on notification:</string>
    <string name="notification_time_label">Notification Time:</string>
    <string name="notification_days_label">Notification Days:</string>
    <string name="notification_sound_label">Notification Sound:</string>
    <string name="expandable_notification">Expandable Notification:</string>
    <string name="notifiy_for_games_label">Notify for games:</string>
    <string name="change_settings_button">Change Settings</string>
    <string name="test_notification_button">Test Notification</string>    
    <string name="test_notification_toast">Launching Test Notification&#8230;</string>
    <string name="notification_color_label">Notification Color:</string>

    <!-- Preferences -->
    <string name="title_activity_preference">Settings</string>
    <string name="pref_basic_settings_title">Basic Settings</string>
    <string name="pref_advanced_settings_title">Advanced Settings</string>
    <string name="pref_enabled">Enable Notifications</string>
    <string name="pref_enabled_summ">Enable/Disable Free App of the Day Notifications</string>
    <string name="pref_notification_time">Notification Time</string>
    <string name="pref_notification_time_summ">The time to pop up a notification\n(Currently %s)</string>
    <string name="pref_notification_days_screen">Notification Days</string>
    <string name="pref_notification_days_screen_summ">The days to pop up a notification\n(Currently %s)</string>
    <string name="pref_notification_sound">Notification Sound</string>
    <string name="pref_notification_sound_summ">The sound to play for a notification\n(Currently %s)</string>
    <string name="pref_show_name_price">Show Name/Price</string>
    <string name="pref_show_name_price_summ">Show app name and price in the notification\n(Disable to prevent data usage)</string>
    <string name="pref_show_on_boot">Show on boot</string>
    <string name="pref_show_on_boot_summ">Launch a notification when the phone boots</string>
    <string name="pref_play_notification_sound">Play sound</string>
    <string name="pref_play_notification_sound_summ">Play selected notification sound when notification launches</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summ">Vibrate when the notification launches</string>
    <string name="pref_expandable_notification">Expandable Notification</string>
    <string name="pref_expandable_notification_summ">Uses expandable notifications to add the free app\'s description\n(Android 4.1+ only)</string>
    <string name="pref_notifiy_for_games">Notify for games</string>
    <string name="pref_notifiy_for_games_summ">Uncheck if you don\'t want notifications for games</string>
    
    <string name="pref_notification_days_sunday">Sunday</string>
    <string name="pref_notification_days_monday">Monday</string>
    <string name="pref_notification_days_tuesday">Tuesday</string>
    <string name="pref_notification_days_wednesday">Wednesday</string>
    <string name="pref_notification_days_thursday">Thursday</string>
    <string name="pref_notification_days_friday">Friday</string>
    <string name="pref_notification_days_saturday">Saturday</string>
    
    <string name="pref_notify_icon_color">Notification Icon Color</string>
    <string name="pref_notify_icon_color_summ">Color of the notification icon\n(Currently %s)</string>
    <string name="pref_notify_icon_color_default">orange</string>
    <string-array name="pref_notify_icon_color_entries">
        <item>Orange</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Grayscale</item>
        <item>Transparent</item>
    </string-array>
    <string-array name="pref_notify_icon_color_values">
        <item>orange</item>
        <item>blue</item>
        <item>red</item>
        <item>green</item>
        <item>grayscale</item>
        <item>transparent</item>
    </string-array>
    
    <!-- About Tab -->
    <string name="about_tab_title">About</string>
    <string name="app_version_label">Version:</string>
    <string name="changelog_button">Changelog</string>
    <string name="uk_users_button">UK Users</string>

    <!-- Donate Tab -->
    <string name="donate_tab_title">Donate</string>
    <string name="donate_description_text">This app is and always will be free without ads.  If you would like to support it\'s development send a donation!</string>
    <string name="donations_prompt">Select an amount</string>
    <string name="donate_button">Donate</string>
    
    <!-- Donate Dialog -->
    <string name="donate_thank_you_dialog">Thanks for Donating!  Hope you continue to enjoy the app!</string>
    <string name="google_play_no_billing">The Google Play Billing Service is not available on this device</string>   
    
    <!-- Menu -->
    <string name="menu_help_text">Help</string>
    <string name="menu_rate_text">Rate</string>
    
    <!-- Help -->
    <string name="title_help">Help</string>
    
</resources>