<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_change_settings"
        android:title="@string/change_settings_button"/>
    <item
        android:id="@+id/menu_test_notification"
        android:title="@string/test_notification_button"/>
    <item
        android:id="@+id/menu_changelog"
        android:title="@string/changelog_button"/>
    <item
        android:id="@+id/menu_uk_users"
        android:title="@string/uk_users_button"/>
    <item
        android:id="@+id/menu_donate"
        android:title="@string/donate_button"/>
    <item
        android:id="@+id/menu_rate"
        android:icon="@drawable/ic_menu_rate"
        android:title="@string/menu_rate_text"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/menu_help_text"
        android:showAsAction="ifRoom"/>    
    
</menu>