<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_sunday"
        android:title="@string/pref_notification_days_sunday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_monday"
        android:title="@string/pref_notification_days_monday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_tuesday"
        android:title="@string/pref_notification_days_tuesday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_wednesday"
        android:title="@string/pref_notification_days_wednesday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_thursday"
        android:title="@string/pref_notification_days_thursday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_friday"
        android:title="@string/pref_notification_days_friday" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_notification_days_saturday"
        android:title="@string/pref_notification_days_saturday" />

</PreferenceScreen>