<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView with buttons at bottom -->
<!-- See: http://stackoverflow.com/questions/2386866/how-to-align-views-at-the-bottom-of-the-screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:padding="15dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_label" />
        
        <TextView
            android:id="@+id/about_html"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
        </FrameLayout>

        <!-- content fixated to the bottom of the screen -->
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/changelog_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/changelog_button" />

            <Button
                android:id="@+id/uk_users_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/uk_users_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>